重构 UpdateSqlParser 和 UpdateEngine，优化 SQL 构建逻辑
- 将 UpdateSqlParser 从使用 MetadataSource 改为使用构建的 Metadata 对象
- 修改 UpdateEngine 的 execute 方法，更新为使用 build 方法构建 SQL
- 增强了对嵌套实体的处理逻辑，支持一对多和多对一关系的更新
- 更新了 StatementUtils，确保 PersistStatement 包含 dataId 字段